<resources>
    <string name="app_name">MovieDB</string>
    <string name="trending">Trending</string>
    <string name="now_playing">Now Playing</string>
    <string name="favourites">Favourites</string>
    <string name="description_title">Description</string>
    <string name="tagline">Famouse Phrase</string>
    <string name="cast_title">Cast</string>
    <string name="oops">Ooopss!!</string>
    <string name="check_network_connection">Please check your Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_desc">Please check your Internet Connection</string>
    <string name="error_msg">Something went wrong. Please take dumpstate.</string>
    <string name="no_favourite">No Favourites</string>
    <string name="no_fav_msg">Binge watch new Movies and add them as Favourites.</string>
</resources>