<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDetail"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/no_internet_cloud_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:tint="@color/White_100"
            android:visibility="gone"
            android:src="@drawable/ic_cloud_off_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <FrameLayout
            android:id="@+id/flBackdrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="@drawable/shape_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/dummy_backdrop"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFavorite"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="16dp"
                android:layout_gravity="end|top"
                android:tint="@color/colorAccent"
                android:background="@drawable/shape_circle"
                android:src="@drawable/ic_favorite_border_black_24dp" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/windowBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/flBackdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flBackdrop">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPoster"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/dummy_poster"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieTitleValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/montserrat_bold"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/White_100"
            android:textSize="20sp"
            tools:text="Red"
            app:layout_constraintBottom_toBottomOf="@+id/flBackdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/flBackdrop" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_vote_average"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:translationZ="9dp"
            app:layout_constraintBottom_toTopOf="@+id/tvMovieTitleValue"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/material_color_yellow_700"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="8.9"
                android:textColor="@color/White_100"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvGenreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_light"
            android:maxLines="1"
            android:textColor="@color/White_80"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Animation, Family, Comedy, Fantasy"
            app:layout_constraintStart_toStartOf="@+id/tvMovieTitleValue"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitleValue" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="center"
            tools:text=" 1h 40min"
            android:drawableLeft="@drawable/ic_schedule_black_24dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/tvGenreValue"
            app:layout_constraintTop_toBottomOf="@+id/tvGenreValue" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/description_title"
                android:textColor="@color/White_100"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescriptionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@color/White_70"
                tools:text="Thirteen-year-old Mei is experiencing the awkwardness of being a teenager with a twist – when she gets too excited, she transforms into a giant red panda."
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />

            <TextView
                android:id="@+id/tvTaglineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/tagline"
                android:textColor="@color/White_100"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/tvDescriptionValue"
                app:layout_constraintStart_toStartOf="@+id/tvDescriptionValue"
                app:layout_constraintTop_toBottomOf="@+id/rvCast" />

            <TextView
                android:id="@+id/tvQuoteValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_light_italic"
                android:textAlignment="center"
                android:textColor="@color/White_70"
                android:textSize="16sp"
                tools:text="Growing up is a beast."
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTaglineTitle" />

            <TextView
                android:id="@+id/tvCastTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/cast_title"
                android:textColor="@color/White_100"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionValue" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCastTitle"
                tools:listitem="@layout/cast_view_layout"
                tools:orientation="horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>